--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html.>
 
+  <head>
+    <title> Luke's Home Page </title>
+  </hl>
+    Welcome to Luke's homepage
+  </hl>
+  </head>
+
+  <body>
+    
+  </body>
+</html.>
